--- a/menu.html
+++ b/menu.html
@@ -58,6 +58,7 @@
     		<div class="small-12 cell">
     			<h1 class="first-paragraph">Menù <small>(Coperto 1,5)</small></h1>
     			<button onclick="toggle_text()" type="button" id="showImage" class="button">Mostra immagini</button>
+    			<p>Il lunedì non serviamo sushi.</p>
     		</div>
     	</div>
     </div>
@@ -65,7 +66,7 @@
     	<div class="grid-x grid-margin-x extra-space">
     		<div class="small-12 cell" data-sticky-container data-magellan data-deep-linking="true" data-offset="30">
     			<ul class="menu hs no-scrollbar" data-sticky data-top-anchor="magellanStickyTop" data-options="marginTop:0;" data-sticky-on="small" style="padding:0 0rem; margin-top:0;">
-    				<li><a href="#sushi">Sushi</a></li>
+    				<!-- <li><a href="#sushi">Sushi</a></li> -->
     				<li><a href="#perStuzzicare">Per Stuzzicare</a></li>
     				<li><a href="#hamburger">Hamburger</a></li>
     				<li><a href="#carne">Carni</a></li>
@@ -82,7 +83,7 @@
     </div>
     <div id="menupage-text">
     	<div class="grid-container">
-    		<section class="grid-x grid-margin-x grid-margin-y" id="sushi" data-magellan-target="sushi">
+    		<!-- <section class="grid-x grid-margin-x grid-margin-y" id="sushi" data-magellan-target="sushi">
     			<div class="small-12 cell">
     				<h2>Sushi i Nostri Signature</h2>
     				<div class="grid-x small-up-1 medium-up-2 large-up-3 grid-margin-x grid-margin-y">
@@ -242,7 +243,7 @@
     					</div>
     				</div>
     			</div>
-    		</section>
+    		</section> -->
     		<section class="grid-x grid-margin-x grid-margin-y" id="perStuzzicare" data-magellan-target="perStuzzicare">
     			<div class="small-12 cell">
     				<h2>Per Stuzzicare</h2>
@@ -340,7 +341,7 @@
     							<div class="card-section">
     								<img src="assets/img/prod/Beerstrot_rettangolare.jpg" id="theImage" style="display:none" class="extra-space-image-tab-menu" alt="Beerstrot">
     								<h3>Beerstrot<span class="price ">11,9</span></h3>
-    								<p>Manzo 180 grammi, cheddar, bacon croccante, cipolla caramellata, insalata, pomodorini confit.<span class=""><br><small>Allergeni: Glutine, Uova, Latte</small></span></p>
+    								<p>Burger di manzo (180 grammi), cheddar, bacon croccante, cipolla caramellata, insalata, pomodorini confit.<span class=""><br><small>Allergeni: Glutine, Uova, Latte</small></span></p>
     							</div>
     						</div>
     					</div>
@@ -349,7 +350,7 @@
     							<div class="card-section">
     								<img src="assets/img/prod/BeerstrotDOPPIO_rettangolare.jpg" id="theImage" style="display:none" class="extra-space-image-tab-menu" alt="Beerstrot Doppio">
     								<h3>Beerstrot Doppio<span class="price ">15,9</span></h3>
-    								<p>Manzo 360 grammi, cheddar, bacon croccante, cipolla caramellata, insalata, pomodorini confit.<span class=""><br><small>Allergeni: Glutine, Uova, Latte</small></span></p>
+    								<p>Doppio burger di manzo (360 grammi), cheddar, bacon croccante, cipolla caramellata, insalata, pomodorini confit.<span class=""><br><small>Allergeni: Glutine, Uova, Latte</small></span></p>
     							</div>
     						</div>
     					</div>
@@ -358,7 +359,7 @@
     							<div class="card-section">
     								<img src="assets/img/prod/NewYork_rettangolare.jpg" id="theImage" style="display:none" class="extra-space-image-tab-menu" alt="New York">
     								<h3>New York<span class="price ">10,5</span></h3>
-    								<p>Manzo 180 grammi, cheddar, cipolla caramellata, insalata.<span class=""><br><small>Allergeni: Glutine, Uova, Latte</small></span></p>
+    								<p>Burger di manzo (180 grammi), cheddar, cipolla caramellata, insalata.<span class=""><br><small>Allergeni: Glutine, Uova, Latte</small></span></p>
     							</div>
     						</div>
     					</div>
@@ -367,7 +368,7 @@
     							<div class="card-section">
     								<img src="assets/img/prod/NewYorkDOPPIO_rettangolare.jpg" id="theImage" style="display:none" class="extra-space-image-tab-menu" alt="New York Doppio">
     								<h3>New York Doppio<span class="price ">14,5</span></h3>
-    								<p>Manzo 360 grammi, cheddar, cipolla caramellata, insalata.<span class=""><br><small>Allergeni: Glutine, Uova, Latte</small></span></p>
+    								<p>Doppio burger di manzo (360 grammi), cheddar, cipolla caramellata, insalata.<span class=""><br><small>Allergeni: Glutine, Uova, Latte</small></span></p>
     							</div>
     						</div>
     					</div>
@@ -376,7 +377,7 @@
     							<div class="card-section">
     								<img src="assets/img/prod/Diablo_rettangolare.jpg" id="theImage" style="display:none" class="extra-space-image-tab-menu" alt="Diablo">
     								<h3>Diablo<span class="price ">11,9</span></h3>
-    								<p>Manzo 180 grammi, cheddar, bacon croccante, rucola, salsa piccante.<span class=""><br><small>Allergeni: Glutine, Uova, Latte</small></span></p>
+    								<p>Burger di manzo (180 grammi), cheddar, bacon croccante, rucola, salsa piccante.<span class=""><br><small>Allergeni: Glutine, Uova, Latte</small></span></p>
     							</div>
     						</div>
     					</div>
@@ -385,7 +386,7 @@
     							<div class="card-section">
     								<img src="assets/img/prod/DiabloDOPPIO_rettangolare.jpg" id="theImage" style="display:none" class="extra-space-image-tab-menu" alt="Diablo Doppio">
     								<h3>Diablo Doppio<span class="price ">15,9</span></h3>
-    								<p>Manzo 360 grammi, cheddar, bacon croccante, rucola, salsa piccante.<span class=""><br><small>Allergeni: Glutine, Uova, Latte</small></span></p>
+    								<p>Doppio burger di manzo (360 grammi), cheddar, bacon croccante, rucola, salsa piccante.<span class=""><br><small>Allergeni: Glutine, Uova, Latte</small></span></p>
     							</div>
     						</div>
     					</div>
@@ -394,7 +395,7 @@
     							<div class="card-section">
     								<img src="assets/img/prod/Pollo_rettangolare.jpg" id="theImage" style="display:none" class="extra-space-image-tab-menu" alt="Pollo">
     								<h3>Pollo<span class="price ">10,9</span></h3>
-    								<p>Pollo 180 grammi, fontina, cipolla caramellata, rucola, salsa allo yogurt.<span class=""><br><small>Allergeni: Glutine, Uova, Latte</small></span></p>
+    								<p>Burger di pollo (180 grammi), fontina, cipolla caramellata, rucola, salsa allo yogurt.<span class=""><br><small>Allergeni: Glutine, Uova, Latte</small></span></p>
     							</div>
     						</div>
     					</div>
@@ -403,7 +404,7 @@
     							<div class="card-section">
     								<img src="assets/img/prod/PolloDOPPIO_rettangolare.jpg" id="theImage" style="display:none" class="extra-space-image-tab-menu" alt="Pollo Doppio">
     								<h3>Pollo Doppio<span class="price ">14,9</span></h3>
-    								<p>Pollo 360 grammi, fontina, cipolla caramellata, rucola, salsa allo yogurt.<span class=""><br><small>Allergeni: Glutine, Uova, Latte</small></span></p>
+    								<p>Doppio burger di pollo (360 grammi), fontina, cipolla caramellata, rucola, salsa allo yogurt.<span class=""><br><small>Allergeni: Glutine, Uova, Latte</small></span></p>
     							</div>
     						</div>
     					</div>
@@ -435,7 +436,7 @@
     							<div class="card-section">
     								<img src="assets/img/prod/CacioePepe_rettangolare.jpg" id="theImage" style="display:none" class="extra-space-image-tab-menu" alt="Cacio e Pepe">
     								<h3>Cacio e Pepe<span class="price ">11,9</span></h3>
-    								<p>Manzo 180 grammi, pecorino vallesina, guanciale, pepe.<span class=""><br><small>Allergeni: Glutine, Uova, Latte</small></span></p>
+    								<p>Burger di manzo (180 grammi), pecorino vallesina, guanciale, pepe.<span class=""><br><small>Allergeni: Glutine, Uova, Latte</small></span></p>
     							</div>
     						</div>
     					</div>
@@ -444,7 +445,7 @@
     							<div class="card-section">
     								<img src="assets/img/prod/CacioePepeDOPPIO_rettangolare.jpg" id="theImage" style="display:none" class="extra-space-image-tab-menu" alt="Cacio e Pepe Doppio">
     								<h3>Cacio e Pepe Doppio<span class="price ">15,9</span></h3>
-    								<p>Manzo 360 grammi, pecorino vallesina, guanciale, pepe.<span class=""><br><small>Allergeni: Glutine, Uova, Latte</small></span></p>
+    								<p>Doppio burger di manzo (360 grammi), pecorino vallesina, guanciale, pepe.<span class=""><br><small>Allergeni: Glutine, Uova, Latte</small></span></p>
     							</div>
     						</div>
     					</div>
@@ -453,7 +454,7 @@
     							<div class="card-section">
     								<img src="assets/img/prod/Primavera_rettangolare.jpg" id="theImage" style="display:none" class="extra-space-image-tab-menu" alt="Primavera">
     								<h3>Primavera<span class="price ">11,9</span></h3>
-    								<p>Manzo 180 grammi, composta di feta, pomodorini e timo; insalata riccia.<span class=""><br><small>Allergeni: Glutine, Uova, Latte</small></span></p>
+    								<p>Burger di manzo (180 grammi), composta di feta, pomodorini e timo; insalata riccia.<span class=""><br><small>Allergeni: Glutine, Uova, Latte</small></span></p>
     							</div>
     						</div>
     					</div>
@@ -462,25 +463,43 @@
     							<div class="card-section">
     								<img src="assets/img/prod/PrimaveraDOPPIO_rettangolare.jpg" id="theImage" style="display:none" class="extra-space-image-tab-menu" alt="Primavera Doppio">
     								<h3>Primavera Doppio<span class="price ">15,9</span></h3>
-    								<p>Manzo 360 grammi, omposta di feta, pomodorini e timo; insalata riccia.<span class=""><br><small>Allergeni: Glutine, Uova, Latte</small></span></p>
+    								<p>Doppio burger di manzo (360 grammi), omposta di feta, pomodorini e timo; insalata riccia.<span class=""><br><small>Allergeni: Glutine, Uova, Latte</small></span></p>
     							</div>
     						</div>
     					</div>
     					<div class="cell">
     						<div class="card">
     							<div class="card-section">
-    								<img src="assets/img/prod/FaveePecorino_rettangolare.jpg" id="theImage" style="display:none" class="extra-space-image-tab-menu" alt="Fave e Pecorino">
-    								<h3>Fave e Pecorino<span class="price ">11,9</span></h3>
-    								<p>Manzo 180 grammi, pecorino vallesina, guanciale, fave in porchetta.<span class=""><br><small>Allergeni: Glutine, Uova, Latte</small></span></p>
+    								<img src="assets/img/prod/Estivo_rettangolare.jpg" id="theImage" style="display:none" class="extra-space-image-tab-menu" alt="Estivo">
+    								<h3>Estivo<span class="price ">11,9</span></h3>
+    								<p>Burger di manzo (180 grammi), mozzarella di bufala, pomodoro fresco, pesto di basilico e pinoli<span class=""><br><small>Allergeni: Glutine, Uova, Latte</small></span></p>
     							</div>
     						</div>
     					</div>
     					<div class="cell">
     						<div class="card">
     							<div class="card-section">
-    								<img src="assets/img/prod/FaveePecorinoDOPPIO_rettangolare.jpg" id="theImage" style="display:none" class="extra-space-image-tab-menu" alt="Fave e Pecorino Doppio">
-    								<h3>Fave e Pecorini Doppio<span class="price ">15,9</span></h3>
-    								<p>Manzo 360 grammi, pecorino vallesina, guanciale, fave in porchetta.<span class=""><br><small>Allergeni: Glutine, Uova, Latte</small></span></p>
+    								<img src="assets/img/prod/EstivoDOPPIO_rettangolare.jpg" id="theImage" style="display:none" class="extra-space-image-tab-menu" alt="Estivo Doppio">
+    								<h3>Estivo Doppio<span class="price ">15,9</span></h3>
+    								<p>Doppio burger di manzo (360 grammi), mozzarella di bufala, pomodoro fresco, pesto di basilico e pinoli<span class=""><br><small>Allergeni: Glutine, Uova, Latte</small></span></p>
+    							</div>
+    						</div>
+    					</div>
+    					<div class="cell">
+    						<div class="card">
+    							<div class="card-section">
+    								<img src="assets/img/prod/Deciso_rettangolare.jpg" id="theImage" style="display:none" class="extra-space-image-tab-menu" alt="">
+    								<h3>Deciso<span class="price ">11,9</span></h3>
+    								<p>Burger di manzo (180 grammi), gorgonzola, guanciale, pomodorini confit<span class=""><br><small>Allergeni: Glutine, Uova, Latte</small></span></p>
+    							</div>
+    						</div>
+    					</div>
+    					<div class="cell">
+    						<div class="card">
+    							<div class="card-section">
+    								<img src="assets/img/prod/DecisoDOPPIO_rettangolare.jpg" id="theImage" style="display:none" class="extra-space-image-tab-menu" alt="">
+    								<h3>Deciso Doppio<span class="price ">15,9</span></h3>
+    								<p>Doppio burger di manzo (360 grammi), gorgonzola, guanciale, pomodorini confit<span class=""><br><small>Allergeni: Glutine, Uova, Latte</small></span></p>
     							</div>
     						</div>
     					</div>
@@ -489,7 +508,7 @@
     							<div class="card-section">
     								<img src="assets/img/prod/Carbonara_rettangolare.jpg" id="theImage" style="display:none" class="extra-space-image-tab-menu" alt="Carbonara">
     								<h3>Carbonara<span class="price ">11,9</span></h3>
-    								<p>Manzo 180 grammi, guanciale, crema di uovo, pecorino romano e pepe.<span class=""><br><small>Allergeni: Glutine, Uova, Latte</small></span></p>
+    								<p>Burger di manzo (180 grammi), guanciale, crema di uovo, pecorino romano e pepe.<span class=""><br><small>Allergeni: Glutine, Uova, Latte</small></span></p>
     							</div>
     						</div>
     					</div>
@@ -498,7 +517,7 @@
     							<div class="card-section">
     								<img src="assets/img/prod/CarbonaraDOPPIO_rettangolare.jpg" id="theImage" style="display:none" class="extra-space-image-tab-menu" alt="Carbonara Doppio">
     								<h3>Carbonara Doppio<span class="price ">15,9</span></h3>
-    								<p>Manzo 360 grammi, guanciale, crema di uovo, pecorino romano e pepe.<span class=""><br><small>Allergeni: Glutine, Uova, Latte</small></span></p>
+    								<p>Doppio burger di manzo (360 grammi), guanciale, crema di uovo, pecorino romano e pepe.<span class=""><br><small>Allergeni: Glutine, Uova, Latte</small></span></p>
     							</div>
     						</div>
     					</div>
@@ -843,6 +862,14 @@
     					<div class="cell">
     						<div class="card">
     							<div class="card-section">
+    								<h3>Fichimori Rosso igt Salento<span class="price ">18 | 5</span></h3>
+    								<p class="">Da bere freddo. Colore rosso rubino. Al naso prevalgono le note di frutta rossa, di fragola e lampone, seguite da delicate sensazioni di rosa canina. Al palato è fresco, sapido e scorrevole, caratterizzato da un ingresso morbido e un retrogusto fruttato.<span class=""><br><small>Allergeni: anidride solforosa e solfiti</small></span></p>
+    							</div>
+    						</div>
+    					</div>
+    					<div class="cell">
+    						<div class="card">
+    							<div class="card-section">
     								<h3>Serrano doc<span class="price ">14,5 | 3,5</span></h3>
     								<p class="">Cantina Umani Ronchi. Colore rosso rubino con riflessi violacei. Profumo pulito di visciola matura. Gran polpa e gran rotondità di sapore, uniti ad una buona struttura garantiscono una piacevole bevibilità.<span class=""><br><small>Allergeni: anidride solforosa e solfiti</small></span></p>
     							</div>
@@ -893,6 +920,22 @@
     							<div class="card-section">
     								<h3>Prosecco Lovre docg<span class="price ">18 | 4</span></h3>
     								<p class="">Cantina Serre di Pederiva. Giallo paglierino spuma brillante, perlage fine e persistente. Soffice e cremoso al gusto, snello e croccante invita al brindisi.<span class=""><br><small>Allergeni: anidride solforosa e solfiti</small></span></p>
+    							</div>
+    						</div>
+    					</div>
+    					<div class="cell">
+    						<div class="card">
+    							<div class="card-section">
+    								<h3>Calafuria Rosato Frizzante igt Salento<span class="price ">20</span></h3>
+    								<p class="">Al naso spicca per note fruttate e agrumate di pompelmo rosa, fiori di arancio, unite a delicate sensazioni gelsomino e tiglio. Al palato è gradevolmente fresco, contraddistinto da un’ottima persistenza aromatica e da una delicata sapidità.<span class=""><br><small>Allergeni: anidride solforosa e solfiti</small></span></p>
+    							</div>
+    						</div>
+    					</div>
+    					<div class="cell">
+    						<div class="card">
+    							<div class="card-section">
+    								<h3>Cuvée Royale Franciacorta docg<span class="price ">32</span></h3>
+    								<p class="">Cantina Marchesi Antinori. Colore giallo scarico, spuma cremosa con perlage fine e persistente. A livello aromatico si colgono note di pesca a polpa bianca, crosta di pane e lieviti. Notevole equilibrio e vivacità tipica del Brut.<span class=""><br><small>Allergeni: anidride solforosa e solfiti</small></span></p>
     							</div>
     						</div>
     					</div>
