--- a/asporto.html
+++ b/asporto.html
@@ -56,6 +56,7 @@
     	<div class="grid-x grid-margin-x">
     		<div class="small-12 cell">
     			<h1 class="first-paragraph">Ordina da Asporto</h1>
+    			<p>Il lunedì non serviamo sushi.</p>
     		</div>
     	</div>
     	<div class="grid-x grid-margin-x">
@@ -106,7 +107,7 @@
     	<div class="grid-x grid-margin-x extra-space">
     		<div class="small-12 cell" data-sticky-container data-magellan data-deep-linking="true" data-offset="30">
     			<ul class="menu hs no-scrollbar" data-sticky data-top-anchor="magellanStickyTop" data-options="marginTop:0;" data-sticky-on="small" style="padding:0 0rem; margin-top:0;">
-    				<li><a href="#sushi">Sushi</a></li>
+    				<!-- <li><a href="#sushi">Sushi</a></li> -->
     				<li><a href="#stuzzicare">Per Stuzzicare</a></li>
     				<li><a href="#hamburger">Hamburger</a></li>
     				<li><a href="#carne">Carni</a></li>
@@ -122,10 +123,10 @@
     	<div class="grid-container">
     		<div class="grid-x grid-margin-x">
     			<div class="small-12 large-8 cell">
-    				<section class="grid-x grid-margin-x grid-margin-y" id="sushi" data-magellan-target="sushi">
-    					<div class="small-12 cell">
+    				<section class="grid-x grid-margin-x grid-margin-y"  id="sushi" data-magellan-target="sushi">
+    					<div class="small-12 cell" hidden>
     						<h2>Sushi i Nostri Signature</h2>
-    						<div class="grid-x small-up-1 medium-up-2 xxlarge-up-3 grid-margin-x grid-margin-y" id="ecommerce-button-top">
+    						<div hidden class="grid-x small-up-1 medium-up-2 xxlarge-up-3 grid-margin-x grid-margin-y" id="ecommerce-button-top">
     							<div class="cell">
     								<div class="hide-for-medium">
     							        <div class="product-page">
@@ -192,7 +193,7 @@
     							</div>
     						</div>
     					</div>
-    					<div class="small-12 cell">
+    					<div class="small-12 cell" hidden>
     						<h2>Sushi Special Mix</h2>
     						<div class="grid-x small-up-1 medium-up-2 xxlarge-up-3 grid-margin-x grid-margin-y">
     							<div class="cell">
@@ -261,7 +262,7 @@
     							</div>
     						</div>
     					</div>
-    					<div class="small-12 cell">
+    					<div class="small-12 cell" hidden>
     						<h2>Sushi per Iniziare</h2>
     						<div class="grid-x small-up-1 medium-up-2 xxlarge-up-3 grid-margin-x grid-margin-y">
     							<div class="cell">
@@ -330,7 +331,7 @@
     							</div>
     						</div>
     					</div>
-    					<div class="small-12 cell">
+    					<div class="small-12 cell" hidden>
     						<h2>Sushi Selezione di Roll</h2>
     						<div class="grid-x small-up-1 medium-up-2 xxlarge-up-3 grid-margin-x grid-margin-y">
     							<div class="cell">
@@ -399,7 +400,7 @@
     							</div>
     						</div>
     					</div>
-    					<div class="small-12 cell">
+    					<div class="small-12 cell" hidden>
     						<h2>Sushi Hosomaki</h2>
     						<div class="grid-x small-up-1 medium-up-2 xxlarge-up-3 grid-margin-x grid-margin-y">
     							<div class="cell">
@@ -468,7 +469,7 @@
     							</div>
     						</div>
     					</div>
-    					<div class="small-12 cell">
+    					<div class="small-12 cell" hidden>
     						<h2>Sushi Uramaki Classici</h2>
     						<div class="grid-x small-up-1 medium-up-2 xxlarge-up-3 grid-margin-x grid-margin-y">
     							<div class="cell">
@@ -537,7 +538,7 @@
     							</div>
     						</div>
     					</div>
-    					<div class="small-12 cell">
+    					<div class="small-12 cell" hidden>
     						<h2>Sushi Temaki</h2>
     						<div class="grid-x small-up-1 medium-up-2 xxlarge-up-3 grid-margin-x grid-margin-y">
     							<div class="cell">
@@ -606,7 +607,7 @@
     							</div>
     						</div>
     					</div>
-    					<div class="small-12 cell">
+    					<div class="small-12 cell" hidden>
     						<h2>Sushi Nigiri</h2>
     						<div class="grid-x small-up-1 medium-up-2 xxlarge-up-3 grid-margin-x grid-margin-y">
     							<div class="cell">
@@ -675,7 +676,7 @@
     							</div>
     						</div>
     					</div>
-    					<div class="small-12 cell">
+    					<div class="small-12 cell" hidden>
     						<h2>Sushi Kit</h2>
     						<div class="grid-x small-up-1 medium-up-2 xxlarge-up-3 grid-margin-x grid-margin-y noimage">
     							<div class="cell">
