--- a/menu.html
+++ b/menu.html
@@ -55,10 +55,10 @@
     <header><img src="assets/img/cover/cover-menu-hamburgers.jpeg" alt="Ca' Vecchia Beerstrot Menù"/></header>
     <div class="grid-container">
     	<div class="grid-x grid-margin-x">
-    		<div class="small-12 cell">
+    		<div class="small-12 medium-8 large-6 cell">
     			<h1 class="first-paragraph">Menù <small>(Coperto 1,5)</small></h1>
-    			<button onclick="toggle_text()" type="button" id="showImage" class="button">Mostra immagini</button>
-    			<p>Il lunedì non serviamo sushi.</p>
+    			<button onclick="toggle_text()" type="button" id="showImage" class="button expanded">Mostra immagini</button>
+    			<p class="extra-space">Il lunedì non serviamo sushi.</p>
     		</div>
     	</div>
     </div>
@@ -482,24 +482,6 @@
     								<img src="assets/img/prod/EstivoDOPPIO_rettangolare.jpg" id="theImage" style="display:none" class="extra-space-image-tab-menu" alt="Estivo Doppio">
     								<h3>Estivo Doppio<span class="price ">15,9</span></h3>
     								<p>Doppio burger di manzo (360 grammi), mozzarella di bufala, pomodoro fresco, pesto di basilico e pinoli<span class=""><br><small>Allergeni: Glutine, Uova, Latte</small></span></p>
-    							</div>
-    						</div>
-    					</div>
-    					<div class="cell">
-    						<div class="card">
-    							<div class="card-section">
-    								<img src="assets/img/prod/Deciso_rettangolare.jpg" id="theImage" style="display:none" class="extra-space-image-tab-menu" alt="">
-    								<h3>Deciso<span class="price ">11,9</span></h3>
-    								<p>Burger di manzo (180 grammi), gorgonzola, guanciale, pomodorini confit<span class=""><br><small>Allergeni: Glutine, Uova, Latte</small></span></p>
-    							</div>
-    						</div>
-    					</div>
-    					<div class="cell">
-    						<div class="card">
-    							<div class="card-section">
-    								<img src="assets/img/prod/DecisoDOPPIO_rettangolare.jpg" id="theImage" style="display:none" class="extra-space-image-tab-menu" alt="">
-    								<h3>Deciso Doppio<span class="price ">15,9</span></h3>
-    								<p>Doppio burger di manzo (360 grammi), gorgonzola, guanciale, pomodorini confit<span class=""><br><small>Allergeni: Glutine, Uova, Latte</small></span></p>
     							</div>
     						</div>
     					</div>
