--- a/menu.html
+++ b/menu.html
@@ -868,7 +868,7 @@
     					<div class="cell">
     						<div class="card">
     							<div class="card-section">
-    								<h3>Villa Bianchi verdicchio doc<span class="price ">14,5 | 3,5</span></h3>
+    								<h3>Villa Bianchi Verdicchio doc<span class="price ">14,5 | 3,5</span></h3>
     								<p class="">Cantina Umani Ronchi. Colore giallo paglierino brillante, con riflessi verdognoli. Al gusto esprime una piacevole struttura basata su note sapide e fresche, in cui risalta un finale con tipico sentore di mandorla.<span class=""><br><small>Allergeni: anidride solforosa e solfiti</small></span></p>
     							</div>
     						</div>
@@ -876,7 +876,7 @@
     					<div class="cell">
     						<div class="card">
     							<div class="card-section">
-    								<h3>Casal di Serra verdicchio superiore doc<span class="price ">18</span></h3>
+    								<h3>Casal di Serra Verdicchio Superiore doc<span class="price ">18</span></h3>
     								<p class="">Cantina Umani Ronchi. Colore giallo paglierino. Profumi intensi di fiori di campo, aromi di frutta a polpa gialla. Ricco e vellutato, con buona dose di freschezza e sapidità che bilancia l’eccellente morbidezza. Finale asciutto, persistente e fruttato.<span class=""><br><small>Allergeni: anidride solforosa e solfiti</small></span></p>
     							</div>
     						</div>
