--- a/menu.html
+++ b/menu.html
@@ -66,7 +66,7 @@
     	<div class="grid-x grid-margin-x extra-space">
     		<div class="small-12 cell" data-sticky-container data-magellan data-deep-linking="true" data-offset="30">
     			<ul class="menu hs no-scrollbar" data-sticky data-top-anchor="magellanStickyTop" data-options="marginTop:0;" data-sticky-on="small" style="padding:0 0rem; margin-top:0;">
-    				<!-- <li><a href="#sushi">Sushi</a></li> -->
+    				<li><a href="#sushi">Sushi</a></li>
     				<li><a href="#perStuzzicare">Per Stuzzicare</a></li>
     				<li><a href="#hamburger">Hamburger</a></li>
     				<li><a href="#carne">Carni</a></li>
@@ -83,7 +83,7 @@
     </div>
     <div id="menupage-text">
     	<div class="grid-container">
-    		<!-- <section class="grid-x grid-margin-x grid-margin-y" id="sushi" data-magellan-target="sushi">
+    		<section class="grid-x grid-margin-x grid-margin-y" id="sushi" data-magellan-target="sushi">
     			<div class="small-12 cell">
     				<h2>Sushi i Nostri Signature</h2>
     				<div class="grid-x small-up-1 medium-up-2 large-up-3 grid-margin-x grid-margin-y">
@@ -243,7 +243,7 @@
     					</div>
     				</div>
     			</div>
-    		</section> -->
+    		</section>
     		<section class="grid-x grid-margin-x grid-margin-y" id="perStuzzicare" data-magellan-target="perStuzzicare">
     			<div class="small-12 cell">
     				<h2>Per Stuzzicare</h2>
@@ -446,6 +446,24 @@
     								<img src="assets/img/prod/CacioePepeDOPPIO_rettangolare.jpg" id="theImage" style="display:none" class="extra-space-image-tab-menu" alt="Cacio e Pepe Doppio">
     								<h3>Cacio e Pepe Doppio<span class="price ">15,9</span></h3>
     								<p>Doppio burger di manzo (360 grammi), pecorino vallesina, guanciale, pepe.<span class=""><br><small>Allergeni: Glutine, Uova, Latte</small></span></p>
+    							</div>
+    						</div>
+    					</div>
+    					<div class="cell">
+    						<div class="card">
+    							<div class="card-section">
+    								<img src="assets/img/prod/Greco_rettangolare.jpg" id="theImage" style="display:none" class="extra-space-image-tab-menu" alt="Cacio e Pepe">
+    								<h3>Greco<span class="price ">11,9</span></h3>
+    								<p>Burger di manzo (180 grammi), melanzana grigliata, insalata riccia, salsa tzatziki. Servito con patatine e a cottura media.<span class=""><br><small>Allergeni: Glutine, Uova, Latte</small></span></p>
+    							</div>
+    						</div>
+    					</div>
+    					<div class="cell">
+    						<div class="card">
+    							<div class="card-section">
+    								<img src="assets/img/prod/GrecoDOPPIO_rettangolare.jpg" id="theImage" style="display:none" class="extra-space-image-tab-menu" alt="Cacio e Pepe Doppio">
+    								<h3>Greco Doppio<span class="price ">15,9</span></h3>
+    								<p>Doppio burger di manzo (360 grammi), melanzana grigliata, insalata riccia, salsa tzatziki. Servito con patatine e a cottura media.<span class=""><br><small>Allergeni: Glutine, Uova, Latte</small></span></p>
     							</div>
     						</div>
     					</div>
