--- a/menu.html
+++ b/menu.html
@@ -926,7 +926,7 @@
     					<div class="cell">
     						<div class="card">
     							<div class="card-section">
-    								<h3>Calafuria Rosato Frizzante igt Salento<span class="price ">20</span></h3>
+    								<h3>Calafuria Rosato igt Salento<span class="price ">20</span></h3>
     								<p class="">Al naso spicca per note fruttate e agrumate di pompelmo rosa, fiori di arancio, unite a delicate sensazioni gelsomino e tiglio. Al palato è gradevolmente fresco, contraddistinto da un’ottima persistenza aromatica e da una delicata sapidità.<span class=""><br><small>Allergeni: anidride solforosa e solfiti</small></span></p>
     							</div>
     						</div>
