--- a/menu.html
+++ b/menu.html
@@ -133,7 +133,7 @@
     							<div class="card-section">
     								<img src="assets/img/prod/RollGamberoeSalmone_rettangolare.jpg" id="theImage" style="display:none" class="extra-space-image-tab-menu" alt="Roll Gambero e Salmone">
     								<h3>Roll Gambero e Salmone<span class="price ">12</span></h3>
-    								<p>Gambero in panko croccante e filetto di salmone ricoperti da tartare di salmone, maionese e lime (8 pezzi).<span class=""><br><small>Allergeni: Glutine, Crostacei, Uova, Pesce, Soia, Senape, Semi di sesamo</small></span></p>
+    								<p>Gambero in panko croccante e filetto di salmone ricoperti da tartare di salmone, maionese, pasta kataifi e zest di lime (8 pezzi).<span class=""><br><small>Allergeni: Glutine, Crostacei, Uova, Pesce, Soia, Senape, Semi di sesamo</small></span></p>
     							</div>
     						</div>
     					</div>
@@ -142,7 +142,7 @@
     							<div class="card-section">
     								<img src="assets/img/prod/RollMandorle_rettangolare.jpg" id="theImage" style="display:none" class="extra-space-image-tab-menu" alt="Roll Mandorle">
     								<h3>Roll Mandorle<span class="price ">11</span></h3>
-    								<p>Salmone e philadelphia ricoperti da tobiko red, mandorle e maionese piccante (8 pezzi).<span class=""><br><small>Allergeni: Uova, Pesce, Latte, Frutta a guscio, Senape</small></span></p>
+    								<p>Salmone e philadelphia ricoperti da tobiko red, mandorle, maionese piccante e pasta kataifi (8 pezzi).<span class=""><br><small>Allergeni: Uova, Pesce, Latte, Frutta a guscio, Senape</small></span></p>
     							</div>
     						</div>
     					</div>
@@ -452,24 +452,6 @@
     					<div class="cell">
     						<div class="card">
     							<div class="card-section">
-    								<img src="assets/img/prod/Greco_rettangolare.jpg" id="theImage" style="display:none" class="extra-space-image-tab-menu" alt="Cacio e Pepe">
-    								<h3>Greco<span class="price ">11,9</span></h3>
-    								<p>Burger di manzo (180 grammi), melanzana grigliata, insalata riccia, salsa tzatziki. Servito con patatine e a cottura media.<span class=""><br><small>Allergeni: Glutine, Uova, Latte</small></span></p>
-    							</div>
-    						</div>
-    					</div>
-    					<div class="cell">
-    						<div class="card">
-    							<div class="card-section">
-    								<img src="assets/img/prod/GrecoDOPPIO_rettangolare.jpg" id="theImage" style="display:none" class="extra-space-image-tab-menu" alt="Cacio e Pepe Doppio">
-    								<h3>Greco Doppio<span class="price ">15,9</span></h3>
-    								<p>Doppio burger di manzo (360 grammi), melanzana grigliata, insalata riccia, salsa tzatziki. Servito con patatine e a cottura media.<span class=""><br><small>Allergeni: Glutine, Uova, Latte</small></span></p>
-    							</div>
-    						</div>
-    					</div>
-    					<div class="cell">
-    						<div class="card">
-    							<div class="card-section">
     								<img src="assets/img/prod/Primavera_rettangolare.jpg" id="theImage" style="display:none" class="extra-space-image-tab-menu" alt="Primavera">
     								<h3>Primavera<span class="price ">11,9</span></h3>
     								<p>Burger di manzo (180 grammi), composta di feta, pomodorini e timo; insalata riccia.<span class=""><br><small>Allergeni: Glutine, Uova, Latte</small></span></p>
@@ -482,24 +464,6 @@
     								<img src="assets/img/prod/PrimaveraDOPPIO_rettangolare.jpg" id="theImage" style="display:none" class="extra-space-image-tab-menu" alt="Primavera Doppio">
     								<h3>Primavera Doppio<span class="price ">15,9</span></h3>
     								<p>Doppio burger di manzo (360 grammi), omposta di feta, pomodorini e timo; insalata riccia.<span class=""><br><small>Allergeni: Glutine, Uova, Latte</small></span></p>
-    							</div>
-    						</div>
-    					</div>
-    					<div class="cell">
-    						<div class="card">
-    							<div class="card-section">
-    								<img src="assets/img/prod/Estivo_rettangolare.jpg" id="theImage" style="display:none" class="extra-space-image-tab-menu" alt="Estivo">
-    								<h3>Estivo<span class="price ">11,9</span></h3>
-    								<p>Burger di manzo (180 grammi), mozzarella di bufala, pomodoro fresco, pesto di basilico e pinoli<span class=""><br><small>Allergeni: Glutine, Uova, Latte</small></span></p>
-    							</div>
-    						</div>
-    					</div>
-    					<div class="cell">
-    						<div class="card">
-    							<div class="card-section">
-    								<img src="assets/img/prod/EstivoDOPPIO_rettangolare.jpg" id="theImage" style="display:none" class="extra-space-image-tab-menu" alt="Estivo Doppio">
-    								<h3>Estivo Doppio<span class="price ">15,9</span></h3>
-    								<p>Doppio burger di manzo (360 grammi), mozzarella di bufala, pomodoro fresco, pesto di basilico e pinoli<span class=""><br><small>Allergeni: Glutine, Uova, Latte</small></span></p>
     							</div>
     						</div>
     					</div>
