--- a/menu.html
+++ b/menu.html
@@ -702,14 +702,14 @@
     							</div>
     						</div>
     					</div>
-    					<div class="cell">
+    				<--	<div class="cell">
     						<div class="card">
     							<div class="card-section">
     								<h3>Mazzu de Fiuri<span class="price "></span></h3>
     								<p class="">IPA 6,5%. Birrificio Mukkeller.<span class=""><br><small>Allergeni: glutine</small></span></p>
     							</div>
     						</div>
-    					</div>
+    					</div> -->
     					<div class="cell">
     						<div class="card">
     							<div class="card-section">
