--- a/menu.html
+++ b/menu.html
@@ -449,7 +449,7 @@
     							</div>
     						</div>
     					</div>
-    					<!-- <div class="cell">
+    					<div class="cell">
     						<div class="card">
     							<div class="card-section">
     								<img src="assets/img/prod/Greco_rettangolare.jpg" id="theImage" style="display:none" class="extra-space-image-tab-menu" alt="Cacio e Pepe">
@@ -466,7 +466,7 @@
     								<p>Doppio burger di manzo (360 grammi), melanzana grigliata, insalata riccia, salsa tzatziki. Servito con patatine e a cottura media.<span class=""><br><small>Allergeni: Glutine, Uova, Latte</small></span></p>
     							</div>
     						</div>
-    					</div> -->
+    					</div>
     					<div class="cell">
     						<div class="card">
     							<div class="card-section">
@@ -485,7 +485,7 @@
     							</div>
     						</div>
     					</div>
-    					<!-- <div class="cell">
+    					<div class="cell">
     						<div class="card">
     							<div class="card-section">
     								<img src="assets/img/prod/Estivo_rettangolare.jpg" id="theImage" style="display:none" class="extra-space-image-tab-menu" alt="Estivo">
@@ -502,7 +502,25 @@
     								<p>Doppio burger di manzo (360 grammi), mozzarella di bufala, pomodoro fresco, maionese al basilico.<span class=""><br><small>Allergeni: Glutine, Uova, Latte</small></span></p>
     							</div>
     						</div>
-    					</div> -->
+    					</div>
+    					<div class="cell">
+    						<div class="card">
+    							<div class="card-section">
+    								<img src="assets/img/prod/Norma_rettangolare.jpg" id="theImage" style="display:none" class="extra-space-image-tab-menu" alt="Estivo">
+    								<h3>Norma<span class="price ">11,9</span></h3>
+    								<p>Burger di manzo (180 grammi), crema di melanzane e basilico, pomodorini confit, ricotta salata.<span class=""><br><small>Allergeni: Glutine, Uova, Latte</small></span></p>
+    							</div>
+    						</div>
+    					</div>
+    					<div class="cell">
+    						<div class="card">
+    							<div class="card-section">
+    								<img src="assets/img/prod/NormaDOPPIO_rettangolare.jpg" id="theImage" style="display:none" class="extra-space-image-tab-menu" alt="Estivo Doppio">
+    								<h3>Norma Doppio<span class="price ">15,9</span></h3>
+    								<p>Doppio burger di manzo (360 grammi), crema di melanzane e basilico, pomodorini confit, ricotta salata.<span class=""><br><small>Allergeni: Glutine, Uova, Latte</small></span></p>
+    							</div>
+    						</div>
+    					</div>
     					<div class="cell">
     						<div class="card">
     							<div class="card-section">
