--- a/menu.html
+++ b/menu.html
@@ -490,7 +490,7 @@
     							<div class="card-section">
     								<img src="assets/img/prod/Estivo_rettangolare.jpg" id="theImage" style="display:none" class="extra-space-image-tab-menu" alt="Estivo">
     								<h3>Estivo<span class="price ">11,9</span></h3>
-    								<p>Burger di manzo (180 grammi), mozzarella di bufala, pomodoro fresco, maionese al basilico.<span class=""><br><small>Allergeni: Glutine, Uova, Latte</small></span></p>
+    								<p>Burger di manzo (180 grammi), mozzarella di bufala, pomodoro fresco; pesto basilico e pinoli.<span class=""><br><small>Allergeni: Glutine, Uova, Latte</small></span></p>
     							</div>
     						</div>
     					</div>
@@ -499,7 +499,7 @@
     							<div class="card-section">
     								<img src="assets/img/prod/EstivoDOPPIO_rettangolare.jpg" id="theImage" style="display:none" class="extra-space-image-tab-menu" alt="Estivo Doppio">
     								<h3>Estivo Doppio<span class="price ">15,9</span></h3>
-    								<p>Doppio burger di manzo (360 grammi), mozzarella di bufala, pomodoro fresco, maionese al basilico.<span class=""><br><small>Allergeni: Glutine, Uova, Latte</small></span></p>
+    								<p>Doppio burger di manzo (360 grammi), mozzarella di bufala, pomodoro fresco; pesto basilico e pinoli.<span class=""><br><small>Allergeni: Glutine, Uova, Latte</small></span></p>
     							</div>
     						</div>
     					</div>
@@ -727,7 +727,7 @@
     					<div class="cell">
     						<div class="card">
     							<div class="card-section">
-    								<h3>Festbier<span class="price "></span></h3>
+    								<h3>Helles<span class="price "></span></h3>
     								<p class="">Helles stile tedesco non amara 4,9%. Birrificio Forst.<span class=""><br><small>Allergeni: glutine</small></span></p>
     							</div>
     						</div>
