--- a/menu.html
+++ b/menu.html
@@ -751,8 +751,8 @@
     					<div class="cell">
     						<div class="card">
     							<div class="card-section">
-    								<h3>Ape Regina<span class="price "></span></h3>
-    								<p class="">Blonde Ale al miele 6,9%. Birrificio MC-77.<span class=""><br><small>Allergeni: glutine</small></span></p>
+    								<h3>Italicum<span class="price "></span></h3>
+    								<p class="">Ale 5%. Birrificio dei Castelli<span class=""><br><small>Allergeni: --</small></span></p>
     							</div>
     						</div>
     					</div>
